[gd_scene load_steps=9 format=3 uid="uid://df4pwy1v5id7m"]

[ext_resource type="Script" path="res://Map/Buildings/building.gd" id="1_fncn4"]
[ext_resource type="Texture2D" uid="uid://npfsynx3gwtr" path="res://icon.svg" id="1_qa540"]
[ext_resource type="Texture2D" uid="uid://cf17sen751apw" path="res://Assets/Sprites/Buildings/sign.png" id="3_jwriq"]
[ext_resource type="Shader" path="res://Shaders/greyscale.gdshader" id="4_5tsaw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qr6g"]
size = Vector2(172.5, 161)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67k4m"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nkem1"]
size = Vector2(130, 80)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_psq3m"]
shader = ExtResource("4_5tsaw")

[node name="Building" type="StaticBody2D"]
script = ExtResource("1_fncn4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qa540")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3qr6g")

[node name="BuildArea" type="Area2D" parent="."]
position = Vector2(191, 134)

[node name="SignSprite" type="Sprite2D" parent="BuildArea"]
z_index = 1
position = Vector2(-3, -107)
texture = ExtResource("3_jwriq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildArea"]
shape = SubResource("RectangleShape2D_67k4m")

[node name="StaticBody2D" type="StaticBody2D" parent="BuildArea"]
position = Vector2(0, -134)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildArea/StaticBody2D"]
position = Vector2(-4, 10)
shape = SubResource("RectangleShape2D_nkem1")

[node name="GrayscaleShader" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_psq3m")
position = Vector2(52, 39)
scale = Vector2(5, 5)
texture = ExtResource("1_qa540")

[connection signal="body_entered" from="BuildArea" to="." method="_on_build_area_body_entered"]
[connection signal="body_exited" from="BuildArea" to="." method="_on_build_area_body_exited"]
